1. Adding EnvironmentMonitor that acts like a system-agent for diagnosing Home and running in a thread when platform starts to check in a loop the condition of a whole platform. 2. Adding AModuleCondition.cs, IModuleCondition.cs, VModuleCondition.cs to Adapter, Contracts, Views projects - defining condition of the module 3. Volume module implement ModuleCondition interface. 4. Adding GetModules() method to IPlatform.cs, APlatform.cs, VPlatform.cs files (used in EnvironmentMonitor to get data to analyze platform condition).

--- a/Hub/Common/Common.csproj
+++ b/Hub/Common/Common.csproj
@@ -81,6 +81,7 @@
     <Compile Include="SafeServiceHost.cs" />
     <Compile Include="SafeThread.cs" />
     <Compile Include="SafeTokenHandler.cs" />
+    <Compile Include="ModuleCondition.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="WebFileServer.cs" />
