--- a/Hub/Apps/Light/Light/Light.csproj
+++ b/Hub/Apps/Light/Light/Light.csproj
@@ -61,6 +61,7 @@
     <Content Include="index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Styles\AppAlertsStyleSheet.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
