Improvement of finding the net and adding LightSensor icon

--- a/Hub/Apps/Light/Light/Light.csproj
+++ b/Hub/Apps/Light/Light/Light.csproj
@@ -58,6 +58,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="icon.png" />
     <Content Include="index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
