--- a/Hub/Apps/Light/Light/Light.csproj
+++ b/Hub/Apps/Light/Light/Light.csproj
@@ -62,7 +62,9 @@
     <Content Include="index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Styles\AppAlertsStyleSheet.css" />
+    <Content Include="Styles\AppAlertsStyleSheet.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
