--- a/Hub/Dashboard/DashboardWeb/DashboardWeb.csproj
+++ b/Hub/Dashboard/DashboardWeb/DashboardWeb.csproj
@@ -82,8 +82,11 @@
     <Content Include="Assets\devices-icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\envMonitor-icon.png">
+       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\settings-icon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\store-icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
