* Some Petri Net tool enhancements * Updates of the libraries

--- a/Gadgeteer/MoistureSensor/MoistureSensor/MoistureSensor.csproj
+++ b/Gadgeteer/MoistureSensor/MoistureSensor/MoistureSensor.csproj
@@ -95,7 +95,9 @@
     <Reference Include="GTM.GHIElectronics.Button, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
-    <Reference Include="GTM.GHIElectronics.MulticolorLed, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="GTM.GHIElectronics.MulticolorLed, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="GTM.GHIElectronics.SDCard, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
