--- a/Hub/Platform/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Platform/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PetrinetTool, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Projects\PetriNetTool_Decompiled\bin\Debug\PetrinetTool.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
