Dealing with TempHumidity restart problem

--- a/Hub/Drivers/Gadgeteer.MicrosoftResearch.LightSensor/Gadgeteer.MicrosoftResearch.LightSensor.csproj
+++ b/Hub/Drivers/Gadgeteer.MicrosoftResearch.LightSensor/Gadgeteer.MicrosoftResearch.LightSensor.csproj
@@ -33,6 +33,9 @@
     <Reference Include="HomeOS.Hub.Common.Bolt.DataStore">
       <HintPath>..\..\output\binaries\Platform\HomeOS.Hub.Common.Bolt.DataStore.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.SPOT.Hardware">
+      <HintPath>..\..\..\..\Program Files (x86)\Microsoft .NET Micro Framework\v4.3\Assemblies\be\Microsoft.SPOT.Hardware.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.AddIn">
       <Private>True</Private>
@@ -65,6 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
