--- a/Hub/Drivers/Gadgeteer.MicrosoftResearch.TempHumiditySensor/Gadgeteer.MicrosoftResearch.TempHumiditySensor.csproj
+++ b/Hub/Drivers/Gadgeteer.MicrosoftResearch.TempHumiditySensor/Gadgeteer.MicrosoftResearch.TempHumiditySensor.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{79D7981F-9AAA-42A3-B0FA-6974CC504982}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HomeOS.Hub.Drivers.Gadgeteer.MicrosoftResearch.LightSensor</RootNamespace>
-    <AssemblyName>HomeOS.Hub.Drivers.Gadgeteer.MicrosoftResearch.LightSensor</AssemblyName>
+    <RootNamespace>HomeOS.Hub.Drivers.Gadgeteer.MicrosoftResearch.TempHumiditySensor</RootNamespace>
+    <AssemblyName>HomeOS.Hub.Drivers.Gadgeteer.MicrosoftResearch.TempHumiditySensor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,9 @@
     <Reference Include="HomeOS.Hub.Common.Bolt.DataStore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Common\bin\Debug\HomeOS.Hub.Common.Bolt.DataStore.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SPOT.Hardware">
+      <HintPath>..\..\..\..\Program Files (x86)\Microsoft .NET Micro Framework\v4.3\Assemblies\be\Microsoft.SPOT.Hardware.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AddIn">
@@ -64,6 +67,9 @@
       <Name>Views</Name>
       <Private>False</Private>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
