--- a/Gadgeteer/DistanceSensor/DistanceSensor/DistanceSensor.csproj
+++ b/Gadgeteer/DistanceSensor/DistanceSensor/DistanceSensor.csproj
@@ -70,6 +70,9 @@
     <Reference Include="GTM.GHIElectronics.Distance_US3, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="GTM.GHIElectronics.GasSense, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="GTM.GHIElectronics.MulticolorLed, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="GTM.GHIElectronics.WiFi_RS21, Version=4.2.102.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
