--- a/Hub/Apps/RelaySwitch/RelaySwitch.csproj
+++ b/Hub/Apps/RelaySwitch/RelaySwitch.csproj
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Styles\AppAlertsStyleSheet.css">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
