--- a/Gadgeteer/RelaySwitch/RelaySwitch.csproj
+++ b/Gadgeteer/RelaySwitch/RelaySwitch.csproj
@@ -7,8 +7,8 @@
     <!--This is an executable-->
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LightSensor</RootNamespace>
-    <AssemblyName>LightSensor</AssemblyName>
+    <RootNamespace>RelaySensor</RootNamespace>
+    <AssemblyName>RelaySensor</AssemblyName>
     <TargetFrameworkVersion>v4.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <!--Identify this as a MicroFramework, CSharp project-->
