Home Editor first approach

--- a/Hub/packages/repositories.config
+++ b/Hub/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Common\Bolt\DataStore\packages.config" />
   <repository path="..\Drivers\HueBridge\packages.config" />
   <repository path="..\Scouts\HueBridge\packages.config" />
+  <repository path="..\Tools\HomeEditor\packages.config" />
   <repository path="..\Tools\Update\ConfigPackager\packages.config" />
   <repository path="..\Tools\Update\ModulePackager\packages.config" />
   <repository path="..\Tools\Update\PackagerHelper\packages.config" />
