Simple version of rules defining (HomeEditor)

--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -62,6 +62,7 @@
     <Compile Include="SituationPriority.cs" />
     <Compile Include="SituationSolver.cs" />
     <Compile Include="Solutions\LoggerSolution.cs" />
+    <Compile Include="Modules\MotionSensorSimulation.cs" />
     <Compile Include="Validators\HistoryValidator.cs" />
     <Compile Include="Validators\LimitValidator.cs" />
     <Compile Include="Validators\StagnancyValidator.cs" />
