--- a/Hub/Dashboard/DashboardWeb/DashboardWeb.csproj
+++ b/Hub/Dashboard/DashboardWeb/DashboardWeb.csproj
@@ -145,6 +145,9 @@
     <Content Include="SignIn.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="HomeStates.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Styles\HomeOSMasterStyleSheet.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
