Moving HomeEditor & HomeStates to EnvironmentMonitor Tool

--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -85,6 +85,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HomeEditor.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="HomeStates.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="SmartHouse.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
