--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -53,6 +53,7 @@
     <Compile Include="EnvironmentMonitor.cs" />
     <Compile Include="ISolution.cs" />
     <Compile Include="IValidator.cs" />
+    <Compile Include="IModuleLinks.cs" />
     <Compile Include="Modules\ClockSimulation.cs" />
     <Compile Include="Modules\LightSensorSimulation.cs" />
     <Compile Include="Modules\SpeakerSimulation.cs" />
