--- a/Hub/Common/Bolt/Apps/HDS_Eval/App.config
+++ b/Hub/Common/Bolt/Apps/HDS_Eval/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="AccountNameTD" value="testdrive" />
@@ -6,4 +6,12 @@
     <add key="S3AccountName" value="" />
     <add key="S3AccountSharedKey" value="" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
