--- a/Hub/Common/Bolt/Apps/HDS_Test/App.config
+++ b/Hub/Common/Bolt/Apps/HDS_Test/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="AccountName" value="testdrive" />
@@ -18,4 +18,12 @@
       <endpoint address="http://homelab-vm.cloudapp.net:23456/TrustedServer/" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITrustedService" contract="TrustedService.ITrustedService" name="BasicHttpBinding_ITrustedService" />
     </client>
   </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
