--- a/Hub/Platform/Platform/app.config
+++ b/Hub/Platform/Platform/app.config
@@ -1,10 +1,16 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <runtime>
     <loadFromRemoteSources enabled="true" />
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
   <appSettings>
     <add key="HomeOSUpdateVersion" value="1.0.0.12" />
@@ -12,8 +18,8 @@
   </appSettings>
   <system.diagnostics>
     <sharedListeners>
-      <add name="console" type="System.Diagnostics.ConsoleTraceListener"/>
-      <add name="file" type="System.Diagnostics.TextWriterTraceListener" initializeData="trace.txt"/>
+      <add name="console" type="System.Diagnostics.ConsoleTraceListener" />
+      <add name="file" type="System.Diagnostics.TextWriterTraceListener" initializeData="trace.txt" />
     </sharedListeners>
     <sources>
       <source name="ConfigTrace">
