--- a/Hub/packages/repositories.config
+++ b/Hub/packages/repositories.config
@@ -1,14 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Apps\AzureEventHubSample\packages.config" />
   <repository path="..\Common\Bolt\DataStore\packages.config" />
   <repository path="..\Drivers\HueBridge\packages.config" />
   <repository path="..\Scouts\HueBridge\packages.config" />
-  <repository path="..\Tools\HomeEditor\packages.config" />
-  <repository path="..\Tools\Update\ConfigPackager\packages.config" />
-  <repository path="..\Tools\Update\ModulePackager\packages.config" />
   <repository path="..\Tools\Update\PackagerHelper\packages.config" />
-  <repository path="..\Tools\Update\PlatformPackager\packages.config" />
-  <repository path="..\Tools\Update\ScoutPackager\packages.config" />
   <repository path="..\Tools\Update\UpdateHelper\packages.config" />
   <repository path="..\Tools\Update\UpdateManager\packages.config" />
 </repositories>
