--- a/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
+++ b/Hub/Tools/EnvironmentMonitor/EnvironmentMonitor.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PetrinetTool, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Projects\PetriNetTool_Decompiled\bin\Debug\PetrinetTool.dll</HintPath>
+    <Reference Include="PetrinetTool">
+      <HintPath>..\..\..\..\PetriNetTool_Decompiled\bin\Debug\PetrinetTool.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -63,6 +62,7 @@
     <Compile Include="Problems\ExceedSituation.cs" />
     <Compile Include="Problems\StatesConflictSituation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RulesManager.cs" />
     <Compile Include="SituationPriority.cs" />
     <Compile Include="SituationSolver.cs" />
     <Compile Include="Solutions\LoggerSolution.cs" />
