--- a/Hub/packages/repositories.config
+++ b/Hub/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Common\Bolt\DataStore\packages.config" />
   <repository path="..\Drivers\HueBridge\packages.config" />
   <repository path="..\Scouts\HueBridge\packages.config" />
+  <repository path="..\Tools\EnvironmentMonitor\packages.config" />
   <repository path="..\Tools\Update\PackagerHelper\packages.config" />
   <repository path="..\Tools\Update\UpdateHelper\packages.config" />
   <repository path="..\Tools\Update\UpdateManager\packages.config" />
